<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Message Title -->
    <EditText
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_title" />

    <!-- Message Body -->
    <EditText
        android:id="@+id/message_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_body"
        android:inputType="textCapSentences|textMultiLine" />

    <!-- Options -->
    <CheckBox
        android:id="@+id/response_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/response_required" />

    <!-- Controls -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Save -->
        <Button
            android:id="@+id/save_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_message" />

        <!-- Back -->
        <Button
            android:id="@+id/cancel_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_message" />

    </TableRow>

</LinearLayout>